feat: 요구사항 구현

--- a/index.html
+++ b/index.html
@@ -16,47 +16,85 @@
         </h1>
       </header>
       <main>
-        <h2 class="title">크론</h2>
+        <h2 class="title">드라고</h2>
         <hr />
         <section>
-          <h3 class="subtitle">자기소개</h3>
+          <h3 class="subtitle" id="introduce">자기소개</h3>
           <p>
-            안녕하세요, 저는 끊임없이 새로운 도전을 통해 성장하는 것을 즐기는 크론이에요. 안정적인 삶에서 벗어나 세 번의
-            큰 전환점을 겪으며 지금의 제가 되었어요. 어제보다 더 나은 오늘의 나를 만들기 위해 노력하고 있죠. 매일의 작은
-            성취들이 모여 제가 한 걸음 더 성장했다는 것을 느낄 때면 가슴이 벅차오르거든요. 그러다 문득, 저처럼 변화를
-            갈망하며 도전을 꿈꾸는 분들이 많다는 것을 알게 되었어요. 나의 성장도 의미 있지만, 누군가의 성장을 함께할 수
-            있다는 건 매일 새로운 설렘을 주는 일이에요.
+            안녕하세요, 달리기를 좋아하는 드라고입니다. <br>
+            사회교육을 전공하고 강사, 교사등의 직업을 거쳐, 개발자로 과감히 진로를 틀었습니다.<br>
+            지식을 글과 말로 표현하고 토론하는 것을 좋아합니다. 토론은 언제나 환영입니다~!<br>
           </p>
         </section>
 
         <section>
-          <h3 class="subtitle">나를 울린 인생 작품</h3>
+          <h3 class="subtitle" id="gallary">나만의 갤러리</h3>
+          <div class="gallery-grid">
+            <img src="./images/running.jpeg" alt="달리기" />
+            <img src="./images/trailrunning.jpeg" alt="트레일 러닝 대회" />
+            <img src="./images/sasimi.jpeg" alt="인생 회" />
+            <img src="./images/lucky.jpeg" alt="운 좋은 순간" />
+            <img src="./images/winnersclub.jpeg" alt="정승제 위너스 클럽" />
+            <img src="./images/guam.jpg" alt="괌" />
+            <img src="./images/guam2.jpg" alt="괌2" />
+            <img src="./images/newyork.jpeg" alt="뉴욕" />
+            <img src="./images/harbin.jpg" alt="하얼빈" />
+          </div>
+        </section>
+
+        <section>
+          <h3 class="subtitle" id="arts">나를 울린 인생 작품</h3>
           <article>
             <h4>인생 영화</h4>
             <div class="thumbnail">
               <img
-                src="https://image.tmdb.org/t/p/w1280/u8ffl7CRAS12KA8eQEtkLuHg8Fm.jpg"
-                width="200"
-                alt="그래비티 영화 포스터"
+                src="./images/인생은 아름다워.webp"
+                width="300"
+                alt="인생은 아름다워 영화 포스터"
               />
             </div>
             <p>
-              알폰소 쿠아론 감독이 연출하고 샌드라 불럭이 주연으로 출연하는 영화 「그래비티」는 우주 정거장에서 임무
-              수행 중 고립된 한 우주인의 생존과 귀환을 그린 작품이다. 대학생 시절 처음 본 이 영화는 당시엔 그저 지루한
-              우주 영화였다. 그런데 이 영화를 다시 보니, 마치 내 미래를 미리 보여준 복선과도 같다는 점을 깨달았다.
+              영화를 볼 때마다 가슴 한쪽이 따뜻해지는 동시에 먹먹해지는 작품이 있다. 인생은 아름다워가 딱 그런 영화다. 
+              비극적인 현실 속에서도 끝까지 웃음을 잃지 않는 귀도의 모습은 단순한 낙천주의가 아니라, 사랑하는 사람들을 위해 선택한 용기였다. <br>
+              가장 인상적인 장면은 마지막, 귀도가 아들에게 끝까지 희망을 주기 위해 장난스럽게 걸어가며 사라지는 순간이었다. 
+              그가 처한 현실은 절망적이었지만, 아들에게만큼은 마지막까지 이 세상이 아름다운 곳으로 남기를 바랐던 것 같다. 
+              결국 그는 희생했지만, 그가 남긴 긍정의 힘은 아들의 기억 속에 남아있었고, 영화가 끝난 뒤에도 오랫동안 마음을 울린다.<br>
+              이 영화가 특별한 이유는, ‘긍정적인 태도’라는 게 단순히 힘든 현실을 외면하는 게 아니라는 걸 보여주기 때문이다. 
+              귀도의 긍정은 끝까지 삶을 지키려는 의지였고, 사랑이었다. 우리는 현실을 바꿀 수 없을 때도 있지만, 
+              그걸 바라보는 태도는 선택할 수 있다. 그리고 그 선택이, 때로는 기적처럼 삶을 아름답게 만들기도 한다.<br>
+            </p>
+          </article>
+          <br>
+          <article>
+            <h4>인생 책</h4>
+            <div class="thumbnail">
+              <img
+                src="./images/가짜논리.jpg"
+                width="300"
+                alt="가짜 논리"
+              />
+            </div>
+            <p>
+              '가짜 논리'를 인생 책으로 꼽은 이유는, 이 책이 세상을 바라보는 방식을 완전히 바꿔주었기 때문이다. 
+              우리는 일상에서 논리적으로 보이는 주장들을 자연스럽게 받아들이곤 하지만, 사실 그 안에는 교묘한 오류와 조작이 숨어 있을 때가 많다.
+              "가짜 논리"는 이러한 논리적 오류를 하나씩 짚어가며, 어떻게 사람들의 생각이 조종될 수 있는지를 보여준다. 
+              이 책을 읽고 나서야 비로소 내가 그동안 얼마나 쉽게 잘못된 논리에 휩쓸렸는지 깨달을 수 있었다. 
+              단순히 지식을 전달하는 것을 넘어, 논리를 비판적으로 바라보는 힘을 길러주었기에 내 사고방식에 결정적인 영향을 미쳤다.<br>
+              특히, 책에서 다루는 다양한 오류 사례들은 현실과 밀접하게 연결되어 있어 더욱 강렬한 인상을 남겼다. 
+              정치, 광고, 언론, 심지어 일상 대화에서도 우리는 가짜 논리에 노출되곤 한다. 
+              하지만 이 책을 통해 논리를 객관적으로 분석하는 습관을 기르게 되었고, 
+              어떤 주장이든 쉽게 믿기보다 한 번 더 의심해보는 태도를 갖게 되었다.
             </p>
           </article>
         </section>
 
         <section>
-          <div class="comment-writing-container">
-            <form>
-              <fieldset>
-                <legend>댓글 쓰기</legend>
-                <textarea
-                  placeholder="정말 멋진 글이네요. 크루가 감동할 수 있도록 훈훈해지는 댓글 부탁 드립니다."
-                ></textarea>
-              </fieldset>
+          <div class="comment-writing-container" id="comment">
+            <form class="comment-container">
+              <img id="commenter-image" src="./images/comment-author-icon.png" alt="사용자 프로필 이미지" />
+              <input id="comment-context" type="text" placeholder="정말 멋진 글이네요. 크루가 감동할 수 있도록 훈훈해지는 댓글 부탁 드립니다."></input>
+              <button type="reset">취소</button>
+              <button id="comment-submit" type="button">등록</button>
             </form>
           </div>
           <ul class="comment-list">
@@ -114,16 +152,16 @@
           <h2>Contents</h2>
           <ol class="contents">
             <li>
-              <a href="#">자기소개</a>
+              <a href="#introduce">자기소개</a>
             </li>
             <li>
-              <a href="#">나만의 갤러리</a>
+              <a href="#gallary">나만의 갤러리</a>
             </li>
             <li>
-              <a href="#">나를 울린 인생 작품</a>
+              <a href="#arts">나를 울린 인생 작품</a>
             </li>
             <li>
-              <a href="#">감상평</a>
+              <a href="#comment">감상평</a>
             </li>
           </ol>
         </nav>
